ferritin/src/snapshots/ferritin__tests__recursive_submodule_listing_plain_mode.snap
---
source: ferritin/src/tests.rs
expression: "render_for_tests(Commands::get(\"crate::submodule\").recursive(), OutputMode ::\nPlain)"
---
Item: submodule
Kind: Module
Visibility: Public
Defined at: test_crate::submodule
In crate: test-crate (0.1.0)

A module with items

Structs

  ◦ SubStruct 
    A struct in a submodule

Enums

  ◦ TestEnum 
    An enum for testing [...]

Functions

  ◦ SubStruct::double 
    Double the value

  ◦ SubStruct::get_value 
    Get the value

  ◦ SubStruct::new 
    Create a new SubStruct

  ◦ sub_function 
    A function in a submodule

Variants

  ◦ TestEnum::VariantA 
    Variant A (see also crate::GenericEnum)

  ◦ TestEnum::VariantB 
    Variant B with data

  ◦ TestEnum::VariantC 
    Variant C with struct data (name and value)

  ◦ VariantA 
    Variant A (see also crate::GenericEnum)

  ◦ VariantB 
    Variant B with data

  ◦ VariantC 
    Variant C with struct data (name and value)
