ferritin/src/snapshots/ferritin__tests__search_2_agent_mode.snap
---
source: ferritin/src/tests.rs
expression: "render_for_tests_rooted(Commands::search(\"generic struct\"), OutputMode ::\nAgent, & get_fixture_crate_path ())"
---
## Search results for 'generic struct'

- fixture-crate::GenericStruct  (Struct) - score: 100.0 — A generic struct for testing multi-paragraph documentation. [+6 lines]
- alloc::borrow::Borrow  (Trait) - score: 67.3 — A trait for borrowing data. [+19 lines]
- fixture-crate::TestStruct  (Struct) - score: 66.3 — A simple struct for testing basic functionality. [+2 lines]
- fixture-crate::GenericEnum  (Enum) - score: 65.2 — A generic enum for testing [+1 lines]
- std::prelude::rust_2021::ambiguous_macros_only::borrow::Borrow  (Trait) - score: 64.1 — A trait for borrowing data. [+19 lines]
- core::prelude::v1::ambiguous_macros_only::borrow::Borrow  (Trait) - score: 64.0 — A trait for borrowing data. [+19 lines]
- std::prelude::v1::Clone  (Trait) - score: 62.5 — A common trait that allows explicit creation of a duplicate value. [+28 lines]
- alloc::io::copy::generic  (Module) - score: 62.4
- core::prelude::v1::ambiguous_macros_only::mem::type_info::Generic  (Enum) - score: 62.4 — Compile-time type information about instantiated generics of structs, enum and union variants.
- std::prelude::v1::ambiguous_macros_only::backtrace_rs::symbolize::gimli::mystd::mem::type_info::Generic  (Enum) - score: 62.4 — Compile-time type information about instantiated generics of structs, enum and union variants.
