ferritin/src/snapshots/ferritin__tests__search_2_ai_mode.snap
---
source: ferritin/src/tests.rs
expression: "render_for_tests_rooted(Commands::search(\"generic struct\"), OutputMode :: Ai,\n& get_fixture_crate_path ())"
---
Search results for 'generic struct'
================================================================================

fixture-crate::GenericStruct  (Struct) - score: 100 (relevance: 100, authority: 0) // A generic struct for testing multi-paragraph documentation. [+6 more lines]


alloc::borrow::Borrow  (Trait) - score: 91 (relevance: 85, authority: 7) // A trait for borrowing data. [+19 more lines]


std::borrow::Borrow  (Trait) - score: 86 (relevance: 85, authority: 1) // A trait for borrowing data. [+19 more lines]


core::borrow::Borrow  (Trait) - score: 85 (relevance: 85, authority: 0) // A trait for borrowing data. [+19 more lines]


std::clone::Clone  (Trait) - score: 84 (relevance: 81, authority: 3) // A common trait that allows explicit creation of a duplicate value. [+28 more lines]


core::clone::Clone  (Trait) - score: 82 (relevance: 81, authority: 1) // A common trait that allows explicit creation of a duplicate value. [+28 more lines]


std::ops::Deref  (Trait) - score: 81 (relevance: 80, authority: 2) // Used for immutable dereferencing operations, like *v. [+23 more lines]


core::ops::Deref  (Trait) - score: 80 (relevance: 80, authority: 1) // Used for immutable dereferencing operations, like *v. [+23 more lines]


std::mem::ManuallyDrop  (Struct) - score: 77 (relevance: 76, authority: 1) // A wrapper to inhibit the compiler from automatically calling T’s destructor. This wrapper is 0-cost. [+21 more lines]


fixture-crate::GenericEnum  (Enum) - score: 76 (relevance: 57, authority: 33) // A generic enum for testing [+1 more lines]
